--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@ function applyXORToBinary(message, key) {
             <p>
                 This project is an extension of the concept from
                 <a href="https://slayy1.vercel.app">Slayybit Image Embed</a>
-                , which explores innovative ways of embedding messages within images using MIDI files. The project dynamically alters the message based on the MIDI file being played and utilizes the XOR operation for real-time binary transformation. The final output is saved as a .slayy file, which encapsulates both visual and encrypted data.
+                , which explores lazy (look for .slayy at the end of a string) ways of embedding messages within images using MIDI files. The project dynamically alters the message based on the MIDI file being played and utilizes the XOR operation for real-time binary transformation. The final output is saved as a .slayy file, which encapsulates both visual and encrypted data.
             </p>
             <p>
                 The core idea here involves using a MIDI Synth to dynamically alter the message based on the MIDI file being played. This was inspired by the
@@ -594,8 +594,9 @@ function applyXORToBinary(message, key) {
                 The term "Slayy" phonetically represents the process 'Ghidra's Sleigh', openly available to use on the NSA's GitHub, which uses various techniques to utilize binary lost data, embedding and transforming data through encryption and visualization techniques. This project is a nod to the importance of secure and hidden data transmission.
             </p>
             <p>
-                More information and the
-                <a href="https://github.com/musha1140/key-mid" target="_blank" class="mt-4 text-blue-500">
+                 <a href="https://github.com/musha1140/APP2" target="_blank" class="mt-4 text-blue-500">
+                    Full Source code varients 
+                <a href="https://github.com/musha1140/GS" target="_blank" class="mt-4 text-blue-500">
                     GitHub source
                 </a>
                 code.
